--- a/index.html
+++ b/index.html
@@ -88,7 +88,51 @@
           </div>
         </div>
       </div>
-      <div class="page3"></div>
+      <div class="page3">
+        <div class="page3-heading">
+          <h6>OUR INVENTORY</h6>
+          <div class="page3-headings">
+            <h1>HAWKRIDGE</h1>
+            <h1>AVAILABLE LOTS</h1>
+          </div>
+        </div>
+        <div class="page3-main">
+          <img src="./img1.svg" alt="" />
+        </div>
+        <div class="page3-line"></div>
+      </div>
+      <div class="page4">
+        <div class="page4-overlay">
+          <div class="page4-top">
+            <h1 data-scroll data-scroll-speed="1.5">TEXAS HILL COUNTRY</h1>
+          </div>
+          <div class="page4-bottom">
+            <div class="page4-bottom-left">
+              <p>
+                The Texas Hill Country is a beloved destination for nature
+                lovers, outdoor enthusiasts, history buffs, and those seeking a
+                relaxed and scenic getaway. Its combination of natural beauty,
+                cultural heritage, and recreational activities make it a unique
+                and cherished part of Texas.
+              </p>
+            </div>
+            <div class="page4-bottom-right">
+              <p>
+                The region is home to numerous state parks as well as beautiful
+                rivers and lakes offering opportunities for hiking, camping,
+                kayaking, boating, and other outdoor recreation. In spring, the
+                Hill Country transforms into a vibrant canvas of wildflowers.
+                Bluebonnets, Indian paintbrushes, and other colorful blooms
+                cover the fields and roadsides, creating a stunning natural
+                spectacle.
+              </p>
+              <div class="page4-btn">
+                <button>Watch our film <i class="ri-play-fill"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
